--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Delete old container
         run: docker rm -f nodejs-docker-container
       - name: Run docker container
-        run: docker run -d -p 3000:3000 -name nodejs-docker-container satyapramodr/nodejs-docker
+        run: docker run -d -p 3000:3000 --name nodejs-docker-container satyapramodr/nodejs-docker
